sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: '=' expected but ';' found.
  var ech = true 
^